--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 
 <h3>Now we have an image:</h3>
 
-<div><img src="images/plantTracing.gif" alt="Graphic of a Mouse Pad"></div>
+<div class="adbox"><img src="images/plantTracing.gif" alt="Graphic of a Mouse Pad"></div>
 
 <h3>
 This is another heading inside of another set of headings tags; this time the tag is an 'h3' instead of an 'h2' , that means it is a less important heading.
