--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 This is another heading inside of another set of headings tags; this time the tag is an 'h3' instead of an 'h2' , that means it is a less important heading.
 </h3>
 
-<h4>Yet another heading - right after this we have an HTML list:</h4>
+<h4 class=""ADBox>Yet another heading - right after this we have an HTML list:</h4>
 
 <ol>
 <li>First item in the list</li>
